# mas_common_robotics

mcr_common/mcr_common_msgs/: CMakeLists.txt
mcr_common/mcr_common_msgs/msg/: EndEffectorConstraint.msg
mcr_manipulation/mcr_hybrid_dynamic_solver/: CMakeLists.txt  package.xml
mcr_manipulation/mcr_hybrid_dynamic_solver/include/: mcr_hybrid_dynamic_solver.hpp
mcr_manipulation/mcr_hybrid_dynamic_solver/launch/: mcr_hybrid_dynamic_solver.launch
mcr_manipulation/mcr_hybrid_dynamic_solver/scripts/: mcr_hybrid_dynamic_solver-node.cpp  mcr_hybrid_dynamic_solver_node.cpp
mcr_manipulation/mcr_hybrid_dynamic_solver/src/: hd_solver_vereshchagin.cpp
mcr_manipulation/mcr_hybrid_dynamics_solver/: CMakeLists.txt  package.xml
mcr_manipulation/mcr_hybrid_dynamics_solver/include/: hd_solver_vereshchagin.hpp  mcr_hybrid_dynamics_solver.hpp  motion_specification.hpp
mcr_manipulation/mcr_hybrid_dynamics_solver/launch/: mcr_hybrid_dynamics_solver.launch
mcr_manipulation/mcr_hybrid_dynamics_solver/scripts/: mcr_hybrid_dynamics_solver_node.cpp
mcr_manipulation/mcr_hybrid_dynamics_solver/src/: hd_solver_vereshchagin.cpp
