<?xml version="1.0"?>
<package format="2">
  <name>mcr_hybrid_dynamic_solver</name>
  <version>0.0.0</version>
  <description>Implementation of the Vereshchagin solver, and its extensions</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="djordje.vukcevic@smail.inf.h-brs.de">Djordje Vukcevic</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="djordje.vukcevic@smail.inf.h-brs.de">Djordje Vukcevic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>mcr_manipulation_utils</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mcr_common_msgs</build_depend>
  <exec_depend>mcr_manipulation_utils</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>brics_actuator</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mcr_common_msgs</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
